# zeus

./: .clang-format  CColor.hpp  CFrustum.hpp  CMakeLists.txt  CMatrix4f.cpp  CMatrix4f.hpp  CProjection.cpp  CProjection.hpp  CRectangle.cpp  CTransform.hpp  CVector2f.cpp  CVector2f.hpp  CVector3f.hpp  CVector4f.cpp  CVector4f.hpp  MathLib.hpp  MathLib.pri  SBoundingBox.hpp  TVectorUnion.hpp
include/: CAABox.hpp  CAxisAngle.hpp  CColor.hpp  CFrustum.hpp  CLine.hpp  CMRay.hpp  CMatrix3f.hpp  CMatrix4f.hpp  COBBox.hpp  CPlane.hpp  CProjection.hpp  CQuaternion.hpp  CRectangle.hpp  CRelAngle.hpp  CSphere.hpp  CTransform.hpp  CUnitVector.hpp  CVector2f.hpp  CVector2i.hpp  CVector3d.hpp  CVector3f.hpp  CVector4f.hpp  Global.hpp  Math.hpp  MathLib.hpp  TVectorUnion.hpp
include/zeus/: CAABox.hpp  CAxisAngle.hpp  CColor.hpp  CEulerAngles.hpp  CFrustum.hpp  CLine.hpp  CLineSeg.hpp  CMRay.hpp  CMatrix3f.hpp  CMatrix4f.hpp  COBBox.hpp  CPlane.hpp  CProjection.hpp  CQuaternion.hpp  CRectangle.hpp  CRelAngle.hpp  CSphere.hpp  CTransform.hpp  CUnitVector.hpp  CVector2d.hpp  CVector2f.hpp  CVector2i.hpp  CVector3d.hpp  CVector3f.hpp  CVector4d.hpp  CVector4f.hpp  Global.hpp  Math.hpp  TVectorUnion.hpp  zeus.hpp
include/zeus/simd/: parallelism_v2_simd.hpp  simd.hpp  simd_avx.hpp  simd_neon.hpp  simd_none.hpp  simd_sse.hpp
src/: CAABox.cpp  CAxisAngle.cpp  CColor.cpp  CEulerAngles.cpp  CFrustum.cpp  CMatrix3f.cpp  CMatrix4f.cpp  COBBox.cpp  CPlane.cpp  CProjection.cpp  CQuaternion.cpp  CRectangle.cpp  CTransform.cpp  CVector2f.cpp  CVector3f.cpp  CVector4f.cpp  Math.cpp  SSELegacy.cpp
test/: CMakeLists.txt  main.cpp
